# clipboard

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Dockerfile  release.yml
src/: main.rs
