[package]
name = "clip"
version = "0.1.0"
edition = "2024"
description="a gui clipboard"

[dependencies]
clipboard-rs = "0.3.0"
device_query = "4.0.1"
eframe = "0.32.3"
egui_extras = {version="0.32.3",  features = ["default", "image"] }

env_logger = {version="0.11.8",optional=true}
log = {version="0.4.28",optional=true}
font-kit = "0.14.3"


image = "0.25.8"
tray-icon = "0.21.1"


[features]
pkg=[]
print=["dep:log","dep:env_logger"]


[package.metadata.bundle]
identifier="cn.inkroom.clipboard"
icon = ["img/ico.png"]
resources=["img"]